# chaporo

./: LICENSE  pyproject.toml
notebooks/: territorial.ipynb
src/chaporo/territorial/: bot.py
