[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chaporo"
version = "0.1.0"
description = "A Python library called chaporo."
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8,<4.0"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=24.0",
    "flake8>=7.0"
]